[tool.poetry]
name = "livezip"
version = "0.1.0"
description = "Memory-bound streamable implementation of ZIP64. Aimed at streaming zips full of multimedia assets (videos, images, etc)."
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.6"
pendulum = "^2.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
isort = {version = "^4.3"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
